# beacon

./: .gitignore  Cargo.toml  README.md  beacon.desktop  digital-sign.desktop  install.sh
.github/: FUNDING.yml
src/: config.rs  main.rs  pocketbase.rs
