[package]
name = "beacon"
version = "0.1.0"
edition = "2021"
description = "A modern digital signage application for displaying church events"
authors = ["Benjamin Slingo"]

[package.metadata.bundle]
name = "Beacon"
identifier = "church.rockvilletollandsda.beacon"
icon = ["icons/icon_256.png", "icons/icon_128.png", "icons/icon_64.png", "icons/icon_32.png"]
version = "1.0.0"
resources = ["icons/*"]
copyright = "© 2024 Rockville Tolland SDA Church"
category = "Office"
short_description = "Digital signage for church events"
long_description = """
A digital signage application that displays upcoming church events,
announcements, and information in a beautiful and engaging way.
"""

[dependencies]
tokio = { version = "1.36", features = ["full"] }
iced = { git = "https://github.com/iced-rs/iced.git", features = ["image", "tokio", "advanced", "debug", "system"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
once_cell = "1.19"
html2text = "0.12"
toml = "0.8"
dirs = "5.0"
ril = { version = "0.10", features = ["all"] }
infer = "0.15"
[package.metadata.iced.assets]
icon = "icons/appicon.png"